# cln-hodl-plugin

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  client.py
cln-hodl-grpc/: Cargo.toml
cln-hodl-grpc/src/: test.rs
cln-hodl-plugin/: Cargo.toml
cln-hodl-plugin/src/: hooks.rs  main.rs  tasks.rs  util.rs
proto/: plugin.proto
src/: config.rs  hold.rs  hooks.rs  main.rs  plugin.rs  state.rs  tasks.rs  util.rs
