[package]
edition = "2021"
name = "cln-hodl-plugin"
version = "0.1.1"

[[bin]]
name = "cln-hodl-grpc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.51"
log = { version = "0.4.14", features = ['std'] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
cln-rpc = "0.1.2"
cln-grpc = "0.1.2"
cln-plugin = "0.1.2"
parking_lot = "0.12"
rcgen = { version = "0.10", features = ["pem", "x509-parser"] }
rand = "0.8"
prost = "0.11"

[dependencies.tokio]
features = ["fs","net", "rt-multi-thread"]
version = "1"

[dependencies.tonic]
features = ["tls", "transport"]
version = "0.8"
